--- a/cms/src/app/header.component.html
+++ b/cms/src/app/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a href="#" class="navbhar-brand" id="">WeLearnCMS</a>
+        </div>
+    <div class="collaps navbar-collapse"></div>
+    </div>
+</nav>
