--- a/cms/src/app/contacts/contacts-list/contacts-list.component.html
+++ b/cms/src/app/contacts/contacts-list/contacts-list.component.html
@@ -1,1 +1,9 @@
-<p>contacts-list works!</p>
+<div class="col-xs-12"></div>
+<a href="" class="list-group-item clearfix" *ngFor="let contacts"></a>
+<div class="pull-left">
+    <h4 class="list-group-item-heading"></h4>
+    <p class="list-group-item-text"></p>
+</div>
+<span class="pull-right">
+    <img src="" alt="" class="img-responsive" style="max-height: 50px;">
+</span>
