--- a/cms/src/app/contacts/contacts-list/contacts-list.component.html
+++ b/cms/src/app/contacts/contacts-list/contacts-list.component.html
@@ -1,9 +1,83 @@
-<div class="col-xs-12"></div>
+<!-- <div class="col-xs-12"></div>
 <a href="" class="list-group-item clearfix" *ngFor="let contacts"></a>
 <div class="pull-left">
     <h4 class="list-group-item-heading"></h4>
     <p class="list-group-item-text"></p>
 </div>
-<span class="pull-right">
+
     <img src="" alt="" class="img-responsive" style="max-height: 50px;">
-</span>
+    
+</span> -->
+
+<div class="row">
+    <div class="col-xs-12 col-sm-offset-3 col-sm-6">
+        <div class="panel panel-default">
+            <div class="panel-heading c-list">
+                <span class="title">Contacts</span>
+                <ul class="pull-right c-controls">
+                    <li><a href="#cant-do-all-the-work-for-you" data-toggle="tooltip" data-placement="top" title="Add Contact"><i class="glyphicon glyphicon-plus"></i></a></li>
+                    <li><a href="#" class="hide-search" data-command="toggle-search" data-toggle="tooltip" data-placement="top" title="Toggle Search"><i class="fa fa-ellipsis-v"></i></a></li>
+                </ul>
+            </div>
+            
+            <div class="row" style="display: none;">
+                <div class="col-xs-12">
+                    <div class="input-group c-search">
+                        <input type="text" class="form-control" id="contact-list-search">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search text-muted"></span></button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            
+            <ul class="list-group" id="contact-list">
+                <li class="list-group-item">
+                    <div class="col-xs-12 col-sm-3">
+                        <img src="http://api.randomuser.me/portraits/men/49.jpg" alt="Scott Stevens" class="img-responsive img-circle" />
+                    </div>
+                    <div class="col-xs-12 col-sm-9">
+                        <span class="name">Scott Stevens</span><br/>
+                        <span class="glyphicon glyphicon-map-marker text-muted c-info" data-toggle="tooltip" title="5842 Hillcrest Rd"></span>
+                        <span class="visible-xs"> <span class="text-muted">5842 Hillcrest Rd</span><br/></span>
+                        <span class="glyphicon glyphicon-earphone text-muted c-info" data-toggle="tooltip" title="(870) 288-4149"></span>
+                        <span class="visible-xs"> <span class="text-muted">(870) 288-4149</span><br/></span>
+                        <span class="fa fa-comments text-muted c-info" data-toggle="tooltip" title="scott.stevens@example.com"></span>
+                        <span class="visible-xs"> <span class="text-muted">scott.stevens@example.com</span><br/></span>
+                    </div>
+                    <div class="clearfix"></div>
+                </li>
+                <li class="list-group-item">
+                    <div class="col-xs-12 col-sm-3">
+                        <img src="http://api.randomuser.me/portraits/men/97.jpg" alt="Seth Frazier" class="img-responsive img-circle" />
+                    </div>
+                    <div class="col-xs-12 col-sm-9">
+                        <span class="name">Seth Frazier</span><br/>
+                        <span class="glyphicon glyphicon-map-marker text-muted c-info" data-toggle="tooltip" title="7396 E North St"></span>
+                        <span class="visible-xs"> <span class="text-muted">7396 E North St</span><br/></span>
+                        <span class="glyphicon glyphicon-earphone text-muted c-info" data-toggle="tooltip" title="(560) 180-4143"></span>
+                        <span class="visible-xs"> <span class="text-muted">(560) 180-4143</span><br/></span>
+                        <span class="fa fa-comments text-muted c-info" data-toggle="tooltip" title="seth.frazier@example.com"></span>
+                        <span class="visible-xs"> <span class="text-muted">seth.frazier@example.com</span><br/></span>
+                    </div>
+                    <div class="clearfix"></div>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div id="cant-do-all-the-work-for-you" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title" id="mySmallModalLabel">Ooops!!!</h4>
+            </div>
+            <div class="modal-body">
+                <p>I am being lazy and do not want to program an "Add User" section into this snippet... So it looks like you'll have to do that for yourself.</p><br/>
+                <p><strong>Sorry<br/>
+                ~ Mouse0270</strong></p>
+            </div>
+        </div>
+    </div>
+</div>
