--- a/cms/src/app/contacts/contacts-list/contacts-list.component.html
+++ b/cms/src/app/contacts/contacts-list/contacts-list.component.html
@@ -33,32 +33,36 @@
             
             <ul class="list-group" id="contact-list">
                 <li class="list-group-item">
-                    <div class="col-xs-12 col-sm-3">
-                        <img src="http://api.randomuser.me/portraits/men/49.jpg" alt="Scott Stevens" class="img-responsive img-circle" />
+                    <div class="pull-right">
+                        <button type="button" class="btn btn-primary">Edit</button>
+                        <button type="button" class="btn btn-danger">Delete</button>
                     </div>
+                    
+                    <div class="col-xs-12 col-sm-3">
+                        <img src="../../assets/images/barzeer.jpg" alt="Barzeer" class="img-responsive img-circle" />
+                    </div>
+                    <h3>Rex Barzee</h3>
+                    <p><b>Email:</b>barzeer@byui.edu</p>
+                    <p><b>Phone:</b>208-496-3768</p>
                     <div class="col-xs-12 col-sm-9">
-                        <span class="name">Scott Stevens</span><br/>
-                        <span class="glyphicon glyphicon-map-marker text-muted c-info" data-toggle="tooltip" title="5842 Hillcrest Rd"></span>
-                        <span class="visible-xs"> <span class="text-muted">5842 Hillcrest Rd</span><br/></span>
-                        <span class="glyphicon glyphicon-earphone text-muted c-info" data-toggle="tooltip" title="(870) 288-4149"></span>
-                        <span class="visible-xs"> <span class="text-muted">(870) 288-4149</span><br/></span>
-                        <span class="fa fa-comments text-muted c-info" data-toggle="tooltip" title="scott.stevens@example.com"></span>
-                        <span class="visible-xs"> <span class="text-muted">scott.stevens@example.com</span><br/></span>
+
                     </div>
                     <div class="clearfix"></div>
                 </li>
                 <li class="list-group-item">
-                    <div class="col-xs-12 col-sm-3">
-                        <img src="http://api.randomuser.me/portraits/men/97.jpg" alt="Seth Frazier" class="img-responsive img-circle" />
+                    <div class="pull-right">
+                        <button type="button" class="btn btn-primary">Edit</button>
+                        <button type="button" class="btn btn-danger">Delete</button>
                     </div>
+                    
+                    <div class="col-xs-12 col-sm-3">
+                        <img src="../../assets/images/jacksonk.jpg" alt="jackson" class="img-responsive img-circle" />
+                    </div>
+                    <h3>R. Kent Jackson</h3>
+                    <p><b>Email:</b>jackson@byui.edu</p>
+                    <p><b>Phone:</b>208-496-3771</p>
                     <div class="col-xs-12 col-sm-9">
-                        <span class="name">Seth Frazier</span><br/>
-                        <span class="glyphicon glyphicon-map-marker text-muted c-info" data-toggle="tooltip" title="7396 E North St"></span>
-                        <span class="visible-xs"> <span class="text-muted">7396 E North St</span><br/></span>
-                        <span class="glyphicon glyphicon-earphone text-muted c-info" data-toggle="tooltip" title="(560) 180-4143"></span>
-                        <span class="visible-xs"> <span class="text-muted">(560) 180-4143</span><br/></span>
-                        <span class="fa fa-comments text-muted c-info" data-toggle="tooltip" title="seth.frazier@example.com"></span>
-                        <span class="visible-xs"> <span class="text-muted">seth.frazier@example.com</span><br/></span>
+
                     </div>
                     <div class="clearfix"></div>
             </ul>
