--- a/cms/src/app/contacts/contacts-list/contacts-list.component.html
+++ b/cms/src/app/contacts/contacts-list/contacts-list.component.html
@@ -1,15 +1,27 @@
-<!-- <div class="col-xs-12"></div>
-<a href="" class="list-group-item clearfix" *ngFor="let contacts"></a>
-<div class="pull-left">
-    <h4 class="list-group-item-heading"></h4>
-    <p class="list-group-item-text"></p>
+<div class="row">
+    <div class="col-xs-12">
+        <button class="btn btn-success">New Contact</button>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <a 
+        href="#" 
+        class="list-group-item clearfix" 
+        *ngFor="let contact of contacts">
+            <div class="pull-left">
+                <h4 class="list-group-item-heading">{{ contact.name }}</h4>
+                <!-- <p class="list-group-item-text">{{ contact.id }}</p> -->
+            </div>
+        <span class="pull-right">
+            <img src="{{ contact.imageUrl }}" [src]="contact.imageUrl" alt="{{ contact.name }}" class="img-responsive" style="max-height: 50px;">
+        </span>
+        </a>
+        <!--Contact item-->
+    </div>
 </div>
 
-    <img src="" alt="" class="img-responsive" style="max-height: 50px;">
-    
-</span> -->
-
-<div class="row">
+<!-- <div class="row">
     <div class="col-xs-12 col-sm-offset-3 col-sm-6">
         <div class="panel panel-default">
             <div class="panel-heading c-list">
@@ -70,18 +82,4 @@
     </div>
 </div>
 
-<div id="cant-do-all-the-work-for-you" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title" id="mySmallModalLabel">Ooops!!!</h4>
-            </div>
-            <div class="modal-body">
-                <p>I am being lazy and do not want to program an "Add User" section into this snippet... So it looks like you'll have to do that for yourself.</p><br/>
-                <p><strong>Sorry<br/>
-                ~ Mouse0270</strong></p>
-            </div>
-        </div>
-    </div>
-</div>
+ -->
