--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -1,10 +1,9 @@
 <div class="row">
     <div class="col-md-5">
-        <h2>Contact-list goes here</h2>
+        <app-contacts-list></app-contacts-list>
     </div>
-    <div class="col-md-4">
-        <h2>contact-detail goes here</h2>
+    <div class="col-md-7">
+        <app-contact-detail></app-contact-detail>
+
     </div>
 </div>
-<app-contacts-list>
-</app-contacts-list>
