still doesnt work... but its something

--- a/cms/src/app/contacts/contacts-list/contacts-list.component.html
+++ b/cms/src/app/contacts/contacts-list/contacts-list.component.html
@@ -6,8 +6,9 @@
 <div class="row">
     <div class="col-xs-12">
         <app-contact-item *ngFor="let x of contacts"
-        [contact]="x">
-
+        [contact]="x"
+        (click)="onSelected(x);"
+        >
         </app-contact-item>
     </div>
 </div>
