--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-offset-3 col-sm-6" style="height:100px">
-        <div class="panel panel-default" *ngFor="let contact of contactDetail">
+    <div class="col-xs-12 col-sm-offset-3 col-sm-6" style="height:100px" )>
+        <div class="panel panel-default">
             <div class="panel-heading">
                 <!-- <div class="col-xs-12 col-sm-3"> -->
                 <h3>{{contact.name}} </h3>
