the parenthesis parasite

--- a/cms/src/app/contacts/contacts-list/contacts-list.component.html
+++ b/cms/src/app/contacts/contacts-list/contacts-list.component.html
@@ -5,33 +5,11 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <app-contact-item *ngFor="let x of contacts"
-        [contact]="x"
-        (click)="onSelected(x);"
+        <app-contact-item *ngFor="let contactItem of contacts"
+        [contact]="contactItem"
+        (click)="onSelected(contactItem)"
         >
         </app-contact-item>
     </div>
 </div>
-
-<!-- <div class="row">
-    <div class="col-xs-12">
-        <button class="btn btn-success">New Contact</button>
-    </div>
-</div>
-<div class="row">
-    <div class="col-xs-12">
-        <a 
-        href="#" 
-        class="list-group-item clearfix" 
-        *ngFor="let contact of contacts">
-            <div class="pull-left">
-                <h4 class="list-group-item-heading">{{ contact.name }}</h4>
-                <p class="list-group-item-text">{{ contact.id }}</p>
-            </div>
-        <span class="pull-right">
-            <img src="{{ contact.imageUrl }}" [src]="contact.imageUrl" alt="{{ contact.name }}" class="img-responsive" style="max-height: 50px;">
-        </span>
-        </a>
-    </div>
-</div> -->
 
