--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -1,11 +1,22 @@
 <div class="row">
     <div class="col-md-5">
         <app-contacts-list
-        (selectedContactEvent)="selectedContact = $event"></app-contacts-list>
-        <p>Hello {{ selectedContact }} </p>
+        (selectedContactEvent)="selectedContact=$event">
+        <!--TODO: Problem is not on the loop (x of contacts).  Neither is on the method onSelected receiving the parameter 'contact'. For some reason, emit always send "undefined" OR selectedContactEvent never happens -->
+        </app-contacts-list>
+        <!-- <p (click)="alertLog(selectedContact)">Hello</p> -->      
     </div>
     <div class="col-md-7">
-        <app-contact-detail *ngIf="selectedContact != undefined || selectedContact != null" [contact]="selectedContact"></app-contact-detail>
+        <!--// <app-contact-detail *ngIf="selectedContact != undefined || selectedContact != null; else infoText;" [contact]="selectedContact">
+        </app-contact-detail> -->
+        <app-contact-detail [contact]="selectedContact" *ngIf="selectedContact">
+        </app-contact-detail>
+
+        <!-- <ng-template #infoText>
+            <p>Please select a recipe</p>
+        </ng-template> -->
 
     </div>
 </div>
+
+
