--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,10 +1,11 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-offset-3 col-sm-6" style="height:100px" )>
+    <div class="col-xs-12 col-sm-offset-3 col-sm-6" style="height:100px">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <!-- <div class="col-xs-12 col-sm-3"> -->
-                <h3>{{contact.name}} </h3>
-                <img src="{{ contact.imageUrl }}" alt="{{contact.name}}" [src]="contact.imageUrl" class="img-responsive img-circle" style="height: 100px;"/>
+                <p>hello contactDetail </p>
+                <!-- <h3>{{contact.name}} </h3> -->
+                <!--<img src="{{ contact.imageUrl }}" alt="{{contact.name}}" [src]="contact.imageUrl" class="img-responsive img-circle" style="height: 100px;"/>-->
                 <!-- <div class="btn-group">
                     <button class="btn btn-primary dropdown-toggle"> Edit</button>
                     <ul class="dropdown-menu">
@@ -12,12 +13,12 @@
                         <li><a href="#">Delete</a></li>
                     </ul>
                 </div> -->
-                <button (click)="onEdit" type="button" class="btn btn-primary" style="margin-left:50%; margin-top:-50%;">Edit</button>
-                <button (click)="onDelete"type="button" class="btn btn-danger" style="margin-top:-50%;">Delete</button>
+                <!-- <button (click)="onEdit" type="button" class="btn btn-primary" style="margin-left:50%; margin-top:-50%;">Edit</button>
+                <button (click)="onDelete"type="button" class="btn btn-danger" style="margin-top:-50%;">Delete</button> -->
             </div>
             <div class="panel-body">
-                <p><b>Email:</b>{{ contact.email }}</p>
-                <p><b>Phone:</b>{{ contact.phone }}</p>
+                <!-- <p><b>Email:</b>{{ contact.email }}</p>
+                <p><b>Phone:</b>{{ contact.phone }}</p> -->
                 <!-- <div class="clearfix"></div> -->
             </div>
         </div>
