--- a/cms/src/app/contacts/contacts-list/contacts-list.component.html
+++ b/cms/src/app/contacts/contacts-list/contacts-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <button (click)="onNewContact" class="btn btn-success">New Contact </button>
+        <button (click)="dummyEmitt" class="btn btn-success">New Contact </button>
     </div>
 </div>
 <div class="row">
